--- a/demo/index.html
+++ b/demo/index.html
@@ -11,23 +11,31 @@
   <div class="container">
      <div class="row">
          <form>
-             <div class="form-group">
-                 <label for="idCard">身份证号码</label>
-                 <input type="text" class="form-control" id="idCard" placeholder="身份证号码"/>
+             <div class="form-inline">
+                 <div class="form-group">
+                     <label for="Name">姓名</label>
+                     <input type="text" class="form-control" id="Name" placeholder="姓名"/>
+                 </div>
+                 <div class="form-group">
+                     <label for="Birthday">出生日期</label>
+                     <input type="text" class="form-control" id="Birthday" placeholder="出生日期"/>
+                 </div>
+                 <div class="form-group">
+                     <label for="CardId">身份证号码</label>
+                     <input type="text" class="form-control" id="CardId" placeholder="身份证号码"/>
+                 </div>
+                 <div class="form-group">
+                     <label for="address">地址</label>
+                     <input type="text" class="form-control" id="address" placeholder="地址"/>
+                 </div>
+                 <input id="btn_readCard" type="button" class="btn btn-default" value="测试刷卡"/>
              </div>
-             <div class="form-group">
-                 <label for="fullName">姓名</label>
-                 <input type="text" class="form-control" id="fullName" placeholder="姓名"/>
+             <div class="form-inline">
+                 <div class="form-group">
+                     <label for="mac">MAC地址</label>
+                     <input type="text" class="form-control" id="mac" placeholder="MAC"/>
+                 </div>
              </div>
-             <div class="form-group">
-                 <label for="address">地址</label>
-                 <input type="text" class="form-control" id="address" placeholder="地址"/>
-             </div>
-             <div class="form-group">
-                 <label for="mac">MAC地址</label>
-                 <input type="text" class="form-control" id="mac" placeholder="MAC"/>
-             </div>
-             <input id="btn_readCard" type="button" class="btn btn-default" value="Submit"/>
          </form>
      </div>
   </div>
@@ -35,7 +43,7 @@
       $(function () {
           $("#btn_readCard").click(function () {
                 var obj=new easyhrip();
-                obj.readCard();
+                 obj.ComplexTranscction({Code:"ReadCard"});
           });
       })
   </script>
